# voxel-engine

./: .gitignore  Cargo.toml  README.md  benchmark_config.json  clippy.toml  rust-toolchain.toml  rustfmt.toml
.corgo/: config.toml
.github/workflows/: rust.yml
renderer-naive/: Cargo.toml
renderer-naive/shaders/: frag.wgsl  vert.wgsl
renderer-naive/src/: app.rs  bench.rs  main.rs  mesh.rs  pipeline.rs  renderer.rs  world_manager.rs
renderer-optimised/: Cargo.toml
renderer-optmised/: Cargo.toml
scripts/: plot_benchmarks.py
voxel-core/: Cargo.toml
voxel-core/src/: lib.rs
voxel-core/src/benchmark/: metrics.rs  mod.rs  recorder.rs  scenes.rs
voxel-core/src/camera/: camera.rs  controller.rs  mod.rs
voxel-core/src/gpu/: context.rs  mod.rs  uniforms.rs
voxel-core/src/input/: brush.rs  mod.rs  state.rs
voxel-core/src/persistence/: delta.rs  mod.rs  store.rs
voxel-core/src/world/: chunk.rs  mod.rs  voxel.rs  world.rs
