[package]
name        = "renderer-naive"
description = "Naive voxel renderer — one draw call per voxel, no optimisation. Benchmark baseline."
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
rust-version.workspace = true

[[bin]]
name = "renderer-naive"
path = "src/main.rs"

[dependencies]
voxel-core = { path = "../voxel-core" }
wgpu.workspace     = true
winit.workspace    = true
glam.workspace     = true
bytemuck.workspace = true
log.workspace      = true
env_logger.workspace = true
pollster.workspace = true