[package]
name        = "voxel-core"
description = "Shared world state, persistence, camera, input, and benchmarking — used by both renderers."
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
rust-version.workspace = true

[dependencies]
wgpu.workspace     = true
winit.workspace    = true
glam.workspace     = true
bytemuck.workspace = true
redb.workspace     = true
rkyv.workspace     = true
noise.workspace    = true
log.workspace      = true
serde.workspace      = true
serde_json.workspace = true
csv.workspace        = true

[features]
default = []
procgen = []