[package]
name        = "voxel-core"
description = "Shared world state, persistence, camera, input, and benchmarking."
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
rust-version.workspace = true

[dependencies]
glam.workspace       = true
bytemuck.workspace   = true
redb.workspace       = true
rkyv.workspace       = true
noise.workspace      = true
log.workspace        = true
serde.workspace      = true
serde_json.workspace = true
csv.workspace        = true
wgpu.workspace       = true
winit.workspace      = true
pollster.workspace   = true

[dev-dependencies]
tempfile = "3"